# playing-with-sand-in-black-boxes

./: .gitignore  CLAUDE.md  LICENSE  README.md  WIP_overview.md  feedback_from_class.md  main.py  pyproject.toml  session_01_foundations.md  session_02_modern_approaches.md  session_03_agentic_systems.md
.claude/: settings.local.json
sandbox/: custom_model.py  main.py  mnist_model.py  neural_network_from_scratch.py  perceptron.py  simple_agent.py  xor_pytorch.py
