[project]
name = "playing-with-sand-in-black-boxes"
version = "0.1.0"
description = "Brief history of ML / AI and a journey from home-baked perceptrons to agentic systems"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "rich",
    "torch>=2.0",
    "torchvision>=0.15",
    "scikit-learn>=1.3",
]

[project.scripts]
sand = "sandbox.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["sandbox"]

[dependency-groups]
dev = [
    "pytest",
    "pytest-asyncio",
    "black",
    "ruff",
    "mypy",
    "ipython",
]